--- a/memo/0.md
+++ b/memo/0.md
@@ -33,6 +33,78 @@ stop|―|0
 * page
 * depth（attribute, class）
 
+　移動メソッド
+
+一次元|i|next(), prev()
+二次元|x,y|nextX(), prevX(), nextY(), prevY()
+二次元|x,y|nextX(), prevX(), nextY(), prevY(), nextZ(), prevZ()
+
+```javascript
+class GridCursor {
+    constructor() {
+        this._size = [1, 1] // row,col
+        this._pos = [0, 0] // x,y
+        this._row = 1
+        this._col = 1
+        this._layout = // ニ左上右下
+        this._x = 0
+        this._y = 0
+    }
+}
+class IntRange {
+    constructor(min=0, max=7) {
+        this.set(min, max)
+    }
+    set(min, max) {
+        if (![min,max].every(v=>Number.isInteger(v)) { throw new TypeError(`min,maxはint型であるべきです。min:${min} max:${max}`) }
+        if (max <= min) { throw new TypeError(`maxはminより大きい値であるべきです。min:${min} max:${max}`) }
+        this._min = min
+        this._max = max
+    }
+    get min( ) { return this._min }
+    set min(v) { this.set(v, this._max) }
+    get max( ) { return this._max }
+    set max(v) { this.set(this._min, v) }
+    within(v) { return Number.isInteger(v) && this._min <= v && v <= this._max }
+    withinThrow(v) { if (this.within(v)) { return true } else { throw new RangeError(`引数値は範囲外です。v:${v} min:${this._min} max:${this._max}`) } }
+}
+class RangeInt {
+    constructor(min=0, max=7, v) {
+        this._range = new IntRange(min, max)
+        this.v = (v) ? v : min
+    }
+    get range() { return this._range }
+    get v( ) { return this._v }
+    set v(x) { this._range.withinThrow(x); this._v = x; }
+}
+
+i = new RangeInt()
+x = new RangeInt()
+y = new RangeInt()
+col = new RangeInt(1)
+row = new RangeInt(1)
+
+i.range.min     // fi  first index
+i.range.max     // li  last index
+i.range.max + 1 // l length
+
+class GridSize {
+    constructor() {
+        this._row = 1
+        this._col = 1
+    }
+    get row( ) { return this._row }
+    set row( ) { return this._row }
+}
+```
+
+LineCursor,ListCursor
+PlainCursor,FlatCursor,GridCursor
+
+## 二次元表
+
+index を 
+
 ```javascript
 class IndexCursor {
     OverMethods = {
