--- a/memo/1.md
+++ b/memo/1.md
@@ -92,3 +92,422 @@ event name|`pointerType`
 
 　マウスのクリック相当になる`mouse.tap`
 
+
+
+# 
+
+```javascript
+const list = new List({
+    type: 'line', // line/grid
+    row: 7, // col: 5
+    height: 24, // px
+    writingMode: 'horizontal',
+})
+```
+```javascript
+const list = new List({
+    type: 'line', // line/grid
+    col: 5, // row: 7
+    width: 24, // px
+    writingMode: 'vertical',
+})
+```
+```javascript
+const list = new List({
+    type: 'line', // line/grid
+    num: 7, // row/col
+    size: 24, // height/width
+    writingMode: 'vertical',
+})
+```
+```javascript
+const list = new List({
+    type: 'grid', // line/grid
+    num: [7, 3], // row/col  blockNum/inlineNum
+    size: ['24px',  '80px'], // height/width  blockSize/inlineSize(inlineSizeは省略したら100%(1frで等分))
+    writingMode: 'horizontal',
+    gridAutoFlow: 'row', // row/column, [row/column] dense
+    loop: 'loop', // loop/yoyo/stop
+    keyboard: {
+        activate: true,
+        prevIndex: (e)=>'ArrowUp'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+        nextIndex: (e)=>'ArrowDown'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+        prevPage: (e)=>'ArrowLeft'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+        nextPage: (e)=>'ArrowRight'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+        choose: (e)=>[' ', 'Enter'].some(n=>===e.key) && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+//        prevFocus: (e)=>'Tab'===e.key && e.shiftKey() && ['ctrlKey','metaKey'].every(n=>!e[n]()),
+//        nextFocus: (e)=>'Tab'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+    },
+    mouse: { // 
+        activate: true,
+        prevIndex: (e)=>['Enter'],
+        nextIndex: (e)=>['Enter'],
+        prevPage: (e)=>['WheelUp', (e)=>e.deltaY<-100],
+        nextPage: (e)=>['WheelDown', (e)=>100<e.deltaY],
+        choose: (e)=>['Click'],
+    },
+    touch: {
+        activate: true,
+        prevIndex: (e)=>['Tap'],
+        nextIndex: (e)=>['Tap'],
+        prevPage: (e)=>['SwipeUp'],   // SwipeBlockBefore
+        nextPage: (e)=>['SwipeDown'], // SwipeBlockAfter
+        choose: (e)=>['SwipeRight'],  // SwipeInlineAfter
+    },
+    pen: {
+        activate: true,
+        prevIndex: (e)=>['Tap'],
+        nextIndex: (e)=>['Tap'],
+        prevPage: (e)=>['SwipeLeft'],
+        nextPage: (e)=>['SwipeRight'],
+        choose: (e)=>['Click'],
+    },
+    gamepads: [
+        {
+            userAgent: '...', // 指定ブラウザ＆指定gamepad.idのとき、この物理配置設定を有効化する
+            id: '...',
+            activate: true,
+            prevIndex: (e)=>'LU'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+            nextIndex: (e)=>'LD'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+            prevPage: (e)=>'LL'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+            nextPage: (e)=>'LR'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+            choose: (e)=>'RR'.e.key),
+            prevFocus: (e)=>'L1'===e.key),
+            nextFocus: (e)=>'R1'===e.key),
+        },
+    ],,
+})
+```
+
+操作|keyboard|mouse|touch|pen|gamepad
+----|--------|-----|-----|---|-------
+カーソル移動|矢印キー|enter/wheel/click/button|tap|tap|矢印キー
+決定|Space/Enter|click/wClick/hold|wTap|wTap|○キー
+キャンセル|ESC|rClick/hold|hold|hold|✕ キー
+フォーカス遷移|Tab|enter|tap|tap|L1/R1
+
+* ソート（並替）
+* フィルタ（絞込）
+* 重ね合わせ（Drag & Drop, 2 stroke choose, multi choose mode(selectボタン押下しながら決定キー押下する等)）
+* 分解（hold）
+
+　複雑な挙動を許すと選択肢が増えて設定やその実装が大変になる。シンプルな機能のみ許可すると簡単に設定・実装できる。
+　マウスのカーソル移動系は`mouseenter`を基本とする。他の選択肢はさせない。
+
+
+　マウスのカーソル移動方向は次のようなパターンがありえる。
+
+ID|カーソル移動|決定
+--|------------|----
+1|`mouseenter`|`click`
+2|`click`|`wClick`
+3|`click`|`hold`
+4|`click`|`drag`
+
+　1はマウスポインタが常駐することを利用した最も楽な入力方法である。ただし対象要素にマウスポインタを当てたままキーボード操作をするとキー操作が無効化されてしまう。異なるデバイス間で操作がバッティングする。
+
+　2〜3はタッチやペンでも可能な操作である。ポインタを移動しただけではカーソル移動しない。クリックするとそこにカーソル移動する。
+
+　このことからポインティングデバイスに関しては次のような選択肢がある。なるだけ操作方法が共通するような設定だ。覚えやすいはず。
+
+ID|マウス|タッチ|ペン
+--|------|------|----
+1|1|2|2|2
+2|1|3|3|3
+3|1|4|4|4
+4|2|2|2|2
+5|3|3|3|3
+6|4|4|4|4
+
+```javascript
+pointingDeviceSetting: 1〜6, 
+```
+```javascript
+const list = new List({
+    type: 'line', // line/grid
+    num: 7, // row/col
+    size: 24, // height/width
+    writingMode: 'vertical',
+    gridAutoFlow: 'row', // row/column, [row/column] dense
+    loop: 'loop', // loop/yoyo/stop
+    pointingDeviceSetting: 1〜6, 
+    keyboard: {
+        activate: true,
+        prevIndex: (e)=>'ArrowUp'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+        nextIndex: (e)=>'ArrowDown'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+        prevPage: (e)=>'ArrowLeft'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+        nextPage: (e)=>'ArrowRight'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+        choose: (e)=>[' ', 'Enter'].some(n=>===e.key) && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+//        prevFocus: (e)=>'Tab'===e.key && e.shiftKey() && ['ctrlKey','metaKey'].every(n=>!e[n]()),
+//        nextFocus: (e)=>'Tab'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+    },
+    gamepads: [
+        {
+            userAgent: '...', // 指定ブラウザ＆指定gamepad.idのとき、この物理配置設定を有効化する
+            id: '...',
+            activate: true,
+            prevIndex: (e)=>'LU'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+            nextIndex: (e)=>'LD'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+            prevPage: (e)=>'LL'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+            nextPage: (e)=>'LR'===e.key && ['shiftKey','ctrlKey','metaKey'].every(n=>!e[n]()),
+            choose: (e)=>'RR'.e.key),
+            prevFocus: (e)=>'L1'===e.key),
+            nextFocus: (e)=>'R1'===e.key),
+        },
+    ],
+})
+```
+
+
+ID|カーソル移動|決定|備考
+--|------------|----|----
+0|`mouseenter`|`click`|Mouseのみ
+1|`tap`|`wTap`|Mouse/Touch/Pen共通
+2|`tap`|`hold`|Mouse/Touch/Pen共通
+3|`tap`|`swipe`|Mouse/Touch/Pen共通
+
+# タッチ系操作の名称
+
+　スワイプ、フリック、パン、スクロール等の操作はすべてマウスでいう所の「ドラッグ」に相当する。
+
+　細かい定義は人によって変わる。以下にPDFがあるが「スワイプ」の名前がなかった。
+
+* https://www.lukew.com/ff/entry.asp?1071
+
+重複用語|概要
+--------|----
+hold/press|長押し
+drag/flick/swipe/pan/scroll|ドラッグ（`mousemove`）
+
+　タッチは指が複数あるためアクションの種類を増やせる。しかしペンやマウスはポインタが一つしかない。少ないほうに合わせて共通の操作方法をみつけてUIの操作に割当したい。
+
+# GamePad
+
+　[GamePad API][]でXBox用コントローラと同じ物理ボタンとジョイスティックのコントローラを利用できる。もしボタンの数や配置が違っても受付は可能。ただしどのボタンがどの番号になるかは不明のため、コントローラの型ごとに設定する必要がある。
+
+[GamePad API]:https://developer.mozilla.org/ja/docs/Web/API/Gamepad_API/Using_the_Gamepad_API
+
+```javascript
+window.addEventListener("gamepadconnected", (e) => {
+  console.log(
+    "Gamepad connected at index %d: %s. %d buttons, %d axes.",
+    e.gamepad.index,
+    e.gamepad.id,
+    e.gamepad.buttons.length,
+    e.gamepad.axes.length,
+  );
+});
+window.addEventListener("gamepaddisconnected", (e) => {
+  console.log(
+    "Gamepad disconnected from index %d: %s",
+    e.gamepad.index,
+    e.gamepad.id,
+  );
+});
+window.addEventListener("gamepadconnected", (e) => {
+  const gp = navigator.getGamepads()[e.gamepad.index];
+  console.log(
+    "Gamepad connected at index %d: %s. %d buttons, %d axes.",
+    gp.index,
+    gp.id,
+    gp.buttons.length,
+    gp.axes.length,
+  );
+});
+
+gamepad.buttons.length
+gamepad.buttons[i].pressed
+gamepad.axes.length,
+gamepad.axes[i].length,
+```
+
+　PlayStation5のコントローラDualSenceはタッチパッドやマイクなどの機能もある。これらを利用するには[WebHID API][]で実装する。実装例が[dualsense-ts][]。
+
+[WebHID API]:https://developer.mozilla.org/ja/docs/Web/API/WebHID_API
+[dualsense-ts]:https://github.com/nsfm/dualsense-ts
+
+1. GampePadをPCに接続する
+2. アプリを起動する
+3. GamePadでキー押下する
+4. `gamepadconnected`イベントが発火する
+5. `gamepad.id`で製品の型を取得し、`gamepad.index`で個体識別番号を取得する
+6. `gamepad.buttons.length`, `gamepad.axes.length`でボタンとスティックの数を取得する
+7. `gamepad.mapping`が`standard`ならXBox用コントローラと同じ配置である
+8. `gamepad.mapping`が`standard`でないなら異なる配置である
+9. 異なる配置の場合、ボタンの数・物理配置・役割が違うため割当設定する必要がある
+10. コントローラとその割当設定に応じて、アプリ固有の機能を割り当てることで、アプリ内の役割をボタンに設定できる
+
+　今回はリスト操作とフォーカス遷移に必要なボタンがあればいい。すなわち十字キー、○✕ 、L1/R1の8ボタン。
+
+操作|keyboard|mouse|touch|pen|gamepad
+----|--------|-----|-----|---|-------
+カーソル移動|矢印キー|enter/wheel/click/button|tap|tap|矢印キー
+決定|Space/Enter|click/wClick/hold|wTap|wTap|○キー
+キャンセル|ESC|rClick/hold|hold|hold|✕ キー
+フォーカス遷移|Tab|enter|tap|tap|L1/R1
+
+```
+　■　　　　　　　　　■
+　■　　　　　　　　　■
+　▲　　　　●　　　　●
+◀　▶　　●　●　　●　●
+　▼　　●　　　●　　●
+```
+```
+　⑥　　　　　　　　　⑦
+　④　　　　　　　　　⑤
+　⑫　　　　⑯　　　　③
+⑭　⑮　　⑧　⑨　　②　①
+　⑬　　⑩　　　⑪　　⓪
+```
+```
+　⑥　　　　　　　　　⑦
+　④　　　　　　　　　⑤
+　⑫　　　　⑯　　　　③
+⑭　⑮　　⑧　⑨　　②　①
+　⑬　A0⑩　　　⑪A2　⓪
+       A1       A3
+```
+
+```
+gamepad.buttons.lengt = 16
+gamepad.buttons[0〜15].pressed
+gamepad.buttons[0〜15].value // 0.0/1.0
+gamepad.axes.length = 4
+gamepad.axes[0〜3].value // -1.0〜+1.0   -(Left/Up), +(Right/Down), 0(ニュートラル)
+```
+
+Location
+Button	0	Bottom button in right cluster
+1	Right button in right cluster
+2	Left button in right cluster
+3	Top button in right cluster
+4	Top left front button
+5	Top right front button
+6	Bottom left front button
+7	Bottom right front button
+8	Left button in center cluster
+9	Right button in center cluster
+10	Left stick pressed button
+11	Right stick pressed button
+12	Top button in left cluster
+13	Bottom button in left cluster
+14	Left button in left cluster
+15	Right button in left cluster
+16	Center button in center cluster
+axes	0	Horizontal axis for left stick (negative left/positive right)
+1	Vertical axis for left stick (negative up/positive down)
+2	Horizontal axis for right stick (negative left/positive right)
+3	Vertical axis for right stick (negative up/positive down)
+
+　機種によっては次のような機能を持っている。
+
+* バイブレーション機能
+* タッチパッド
+* マイク
+* ライト
+
+　このうちバイブ機能のみ制御できる。それ以外は[WebHID API][]で制御するしかない。
+
+　基本的にはスティックとボタンの数や配置をコンフィグで設定できれば問題ない。
+
+```
+操作中パッド: [idx] [ID]
+ボタン数: [buttons.length]
+軸数: [axes.length]
+
+入力中: [ buttons[idx] ]
+
+
+物理配置: [非標準(XBox用コントローラに一致する保障なし)]
+
+　上面
+　　　⑥　　　　　　　　　⑦
+　　　④　　　　　　　　　⑤
+　正面
+　　　⑫　　　　⑯　　　　③
+　　⑭　⑮　　⑧　⑨　　②　①
+　　　⑬　　⑩　　　⑪　　⓪ 
+  軸
+            A1-         A3-
+  　　　 A0-⑩A0+　　A2-⑪A2+
+            A1+         A3+
+　背面
+　側面
+```
+
+　コンフィグには次の２パターンの考え方がある。
+
+A. standard（XBox）に合わせる
+B. デバイス固有の入力も受け付ける
+
+　AはXBox用コントローラの数しかボタンや軸を利用できない。その代わり標準化しやすい。
+
+　Bはデバイス固有のボタンが使える。中には6ボタンや背面ボタン等がある。特に格ゲーは6ボタンだとパンチとキックに弱中強を割り当てられる。これに背面ボタンが左右に2つずつ4個ある。複雑な操作を同時にこなす必要があるゲームでは多ボタンを使いたい。
+
+
+　今回は基本的な操作だけで十分足りる。多機能性よりも移植性の高さが重要。すなわちどんなゲームパッドでも意図通りに操作できることが大切。そのため標準コントローラのボタン数とその配置に合わせたボタンのみ使うようにコンフィグを作りたい。そのためには物理配置がわかるようなID表記がほしい。以下のように。
+
+id|name|物理配置
+--|----|--------
+B0|RD|正面右側下ボタン
+B1|RR|正面右側右ボタン
+B2|RL|正面右側左ボタン
+B3|RU|正面右側上ボタン
+B4|L1|上面手前左ボタン
+B5|R1|上面手前右ボタン
+B6|L2|上面奥左ボタン
+B7|R2|上面奥右ボタン
+B8|CL|正面中央左ボタン(start)
+B9|CR|正面中央右ボタン(select)
+B10|AL|左軸押し込み
+B11|AR|右軸押し込み
+B12|LU|正面左上ボタン
+B13|LD|正面左下ボタン
+B14|LL|正面左左ボタン
+B15|LR|正面左右ボタン
+B16|CC|正面中央中ボタン(vender)
+A0-|ALL|左軸左
+A0+|ALR|左軸右
+A1-|ALU|左軸上
+A1+|ALD|左軸下
+A2-|ARL|右軸左
+A2+|ARR|右軸右
+A3-|ARU|右軸上
+A3+|ARD|右軸下
+
+17 + 8 = 25
+
+R: Right
+L: Left
+U: Up
+D: Down
+A: Axe(軸)
+B: back(背面)
+B: back(奥)
+F: forward(手前)
+
+　backがかぶる。奥と背面は両方ともback。L1/R1はプレステ以来上面ボタンなのでそのまま使う。○✕△□と違ってアルファベットで表現できるし。
+
+　ついでに6ボタンや背面ボタンがあるときの名前も考えてみた。（）
+
+id|name|物理配置
+--|----|--------
+-|P1|正面右側上段左ボタン(弱パンチ)
+-|P2|正面右側上段中ボタン(中パンチ)
+-|P3|正面右側上段右ボタン(強パンチ)
+-|K1|正面右側下段左ボタン(弱キック)
+-|K2|正面右側下段中ボタン(中キック)
+-|K3|正面右側下段右ボタン(強キック)
+
+id|name|物理配置
+--|----|--------
+-|BL1|背面左上
+-|BL2|背面左下
+-|BR1|背面右上
+-|BR2|背面右下
+
+　6ボタンのときは`R[UDLF]`の4ボタンが`[PK][123]`に変わる。
+
+　Gamepad API を使って入力受付するとID(番号)が渡される。問題は、その番号だけでは物理配置が不明であるということだ。もしこの番号と物理配置が違えば標準コントローラと同じ様には使えない。まったく異なる配置となり、思い通りに操作できなくなる。それでは困るため、`gamepad.mapping != 'standard'`なコントローラはユーザが手動でコンフィグ設定する必要がある。（標準配置にあわせて番号を配置する）
+
