--- a/memo/1.md
+++ b/memo/1.md
@@ -258,13 +258,20 @@ const list = new List({
 })
 ```
 
-
 ID|カーソル移動|決定|備考
 --|------------|----|----
 0|`mouseenter`|`click`|Mouseのみ
 1|`tap`|`wTap`|Mouse/Touch/Pen共通
 2|`tap`|`hold`|Mouse/Touch/Pen共通
 3|`tap`|`swipe`|Mouse/Touch/Pen共通
+
+ID|カーソル移動|決定|ページ移動|フォーカス遷移
+--|------------|----|----------|--------------
+1|`mouseenter`|`click`|`wheel`|`mouseenter`
+1|`mouseenter`|`click`|HTML Button `click`|`mouseenter`
+2|`click`|`wClick`
+3|`click`|`hold`
+4|`click`|`drag`
 
 # タッチ系操作の名称
 
