--- a/memo/2.md
+++ b/memo/2.md
@@ -247,14 +247,39 @@ itemDir: `1b`, // 4(1i,1b,2i,2b)      `ニ左上右下`, grid-auto-flow: row/col
 
 ```javascript
 const list = new List({
-    items: [...],
-    textDir: `lh`,
-    itemDir: `1b`,
-    num: [7, 5], // inline, block, の要素数
-    len: 8, // 1要素あたりの文字数表示保障数（全角字の数（等幅）（font-size,letter-spacing,line-height,margin,padding,border））
-    attrs: {
-        ol: ()=>({}),
-        li: ()=>({}),
+    view: {
+        items: [...],
+        textDir: `lh`,
+        itemDir: `1b`,
+        num: [7, 5], // inline, block, の要素数
+        len: 8, // 1要素あたりの文字数表示保障数（全角字の数。等幅。font-size,letter-spacing,line-height,margin,padding,border）
+        attrs: {
+            ol: ()=>({class:'', style:''}),
+            li: ()=>({}),
+        },
+    },
+    controll: {
+        pointingDevice: 1, // 1〜6  mouse,touch,pen
+        keyboard: {
+            prevIndex: (e)=>{'ArrowUp'===e.key},   // ib: inlineBefore
+            nextIndex: (e)=>{'ArrowDown'===e.key}, // ia: inlineAfter
+            prevPage: (e)=>{'ArrowLeft'===e.key},  // bb: blockBefore
+            nextPage: (e)=>{'ArrowRight'===e.key}, // ba: blockAfter
+            choose: (e)=>{'ArrowUp'===e.key},      // ok: 
+        },
+        gamepads: [
+            {
+                id: 'Logicool Dual Action',
+                prevIndex: (e)=>, // [number]:ButtonID, [function]:(e)=>0.5<e.gamepad.axes[0].value
+                nextIndex: (e)=>, // 
+                prevPage: (e)=>,  // 
+                nextPage: (e)=>,  // 
+                choose: (e)=>'...'===e.gamepad.index && e.gamepad.buttons[0].pressed,      // ok: 
+            },
+        ],
+    },
+    model: {
+
     },
 })
 ```
